--- a/OllamaExample/worker/package.json
+++ b/OllamaExample/worker/package.json
@@ -10,11 +10,14 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.9",
+    "prisma": "^6.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.0",
     "bullmq": "^5.40.3",
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "ollama": "^0.5.13"
   }
 }
