fixes a few things

--- a/OllamaExample/.devcontainer/worker_container/devcontainer.json
+++ b/OllamaExample/.devcontainer/worker_container/devcontainer.json
@@ -2,5 +2,6 @@
   "name": "Worker Container",
   "dockerComposeFile": "../../docker-compose.yml",
   "service": "worker",
-  "workspaceFolder": "/app"
+  "workspaceFolder": "/app",
+  "shutdownAction": "none"
 }
