--- a/OllamaExample/worker/package.json
+++ b/OllamaExample/worker/package.json
@@ -4,7 +4,8 @@
   "description": "\\",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "prisma-generate": "prisma generate"
   },
   "author": "",
   "license": "ISC",
